/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Scala application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10.2/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the scala Plugin to add support for Scala.
    id 'scala'

    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'

    // Gradle versions plugin
    id 'com.github.ben-manes.versions' version '0.51.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use Scala 2.13 in our library project
    implementation libs.scala.library

    // This dependency is used by the application.
    implementation libs.guava

    // Use Scalatest for testing our library
    testImplementation libs.junit
    testImplementation libs.scalatest.v2.v13
    testImplementation libs.junit.v4.v13.v2.v13

    // Need scala-xml at test runtime
    testRuntimeOnly libs.scala.xml.v2.v13

    // Tulip runtime
    implementation libs.tulip.runtime
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
    applicationDefaultJvmArgs = [
            // -server or -client
            "-server",

            // Create a 2 GB regions of Large Pages
            //
            // $ ls /sys/kernel/mm/hugepages/
            //   hugepages-1048576kB  hugepages-2048kB
            // // # Reserve 2 GB of RAM
            // $ echo 1024 > /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages
            //
            // "-XX:+UseLargePages",

            "-Xms2048m",
            "-Xmx2048m",

            // "-XX:+UseParallelGC",
            // "-XX:+UseG1GC", "-XX:+UseDynamicNumberOfGCThreads",
            "-XX:+UseZGC", "-XX:+ZGenerational",

            // VisualVM
            // "-Dcom.sun.management.jmxremote.port=3333",
            // "-Dcom.sun.management.jmxremote.ssl=false",
            // "-Dcom.sun.management.jmxremote.authenticate=false"
    ]
}
